added utility functions

--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "jest",
     "watch": "jest --watch",
+    "coverage": "jest --coverage",
     "start": "nodemon app.js"
   },
   "author": "swaroop325",
